syntax = "proto3";

option go_package = "github.com/Ferriem/grpc/code/HelloWorld/hello";
package hello;

service Hello {
    //SayHello method
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    //LotsOfReplies method
    rpc LotsOfReplies (HelloRequest) returns (stream HelloReply) {}

    //LotsOfGreetings method
    rpc LotsOfGreetings (stream HelloRequest) returns (HelloReply) {}

    //BidiHello method
    rpc BidiHello (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}